human-intervention-logs/org.yaml:snakeyaml:2.0/gradle-test/gradle-test-2026-05-02T14-50-10-211186Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.yaml:snakeyaml:2.0
Command: `/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2004-797ff25f/gradlew nativeTest`
Executing test...
-------
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :jar
> Task :checkTestTimeoutAnnotations
> Task :processTestResources
> Task :tck-test-support:compileJava
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes
> Task :tck-test-support:jar

> Task :compileTestJava FAILED
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2004-797ff25f/tests/src/org.yaml/snakeyaml/2.0/src/test/java/org_yaml/snakeyaml/CustomClassLoaderConstructorTest.java:25: error: no suitable constructor found for CustomClassLoaderConstructor(ClassLoader)
        Yaml yaml = new Yaml(new CustomClassLoaderConstructor(resolvingClassLoader));
                             ^
    constructor CustomClassLoaderConstructor.CustomClassLoaderConstructor(ClassLoader,LoaderOptions) is not applicable
      (actual and formal argument lists differ in length)
    constructor CustomClassLoaderConstructor.CustomClassLoaderConstructor(Class<? extends Object>,ClassLoader,LoaderOptions) is not applicable
      (actual and formal argument lists differ in length)
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2004-797ff25f/tests/src/org.yaml/snakeyaml/2.0/src/test/java/org_yaml/snakeyaml/TypeDescriptionTest.java:22: error: incompatible types: TypeDescription cannot be converted to LoaderOptions
        Yaml yaml = new Yaml(new Constructor(rootType));
                                             ^
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2004-797ff25f/tests/src/org.yaml/snakeyaml/2.0/src/test/java/org_yaml/snakeyaml/ConstructorConstructScalarTest.java:21: error: incompatible types: String cannot be converted to LoaderOptions
        Yaml yaml = new Yaml(new Constructor(RootBean.class.getName()));
                                                                   ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
3 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2004-797ff25f/tests/src/org.yaml/snakeyaml/2.0/src/test/java/org_yaml/snakeyaml/CustomClassLoaderConstructorTest.java:25: error: no suitable constructor found for CustomClassLoaderConstructor(ClassLoader)
          Yaml yaml = new Yaml(new CustomClassLoaderConstructor(resolvingClassLoader));
                               ^
      constructor CustomClassLoaderConstructor.CustomClassLoaderConstructor(ClassLoader,LoaderOptions) is not applicable
        (actual and formal argument lists differ in length)
      constructor CustomClassLoaderConstructor.CustomClassLoaderConstructor(Class<? extends Object>,ClassLoader,LoaderOptions) is not applicable
        (actual and formal argument lists differ in length)
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2004-797ff25f/tests/src/org.yaml/snakeyaml/2.0/src/test/java/org_yaml/snakeyaml/TypeDescriptionTest.java:22: error: incompatible types: TypeDescription cannot be converted to LoaderOptions
          Yaml yaml = new Yaml(new Constructor(rootType));
                                               ^
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2004-797ff25f/tests/src/org.yaml/snakeyaml/2.0/src/test/java/org_yaml/snakeyaml/ConstructorConstructScalarTest.java:21: error: incompatible types: String cannot be converted to LoaderOptions
          Yaml yaml = new Yaml(new Constructor(RootBean.class.getName()));
                                                                     ^
  Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 5s

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2004-797ff25f/tests/src/org.yaml/snakeyaml/2.0/build/reports/problems/problems-report.html

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
14 actionable tasks: 6 executed, 8 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2004-797ff25f/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.yaml:snakeyaml:2.0 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 9s
9 actionable tasks: 1 executed, 8 up-to-date
